# SlicerAirwaySegmentation

./: CMakeLists.txt  README  README.md
AirwaySegmentation/: AirwaySegmentation.py  CMakeLists.txt
AirwaySegmentation/Resources/UI/: AirwaySegmentation.ui
AirwaySegmentationCLI/: AirwaySegmentationCLI.cxx  AirwaySegmentationCLI.xml  CMakeLists.txt
